// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Monitoring /> should render correctly with every health status 1`] = `
<Fragment>
  <ClusterHealthCard
    discoveredIssues={0}
    lastCheckIn={2020-02-02T00:00:00.000Z}
    status="HEALTHY"
  />
  <Card
    className="ocm-c-monitoring-status__card"
  >
    <CardTitle
      className="ocm-c-monitoring-status__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Status
      </Title>
    </CardTitle>
    <CardBody
      className="ocm-c-monitoring-status__card--body"
    >
      <MonitoringList
        alerts={Object {}}
        cluster={Object {}}
        nodes={Object {}}
        operators={Object {}}
        resourceUsage={Object {}}
      />
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<Monitoring /> should render correctly with every health status 2`] = `
<Fragment>
  <ClusterHealthCard
    discoveredIssues={0}
    lastCheckIn={2020-02-02T00:00:00.000Z}
    status="HAS_ISSUES"
  />
  <Card
    className="ocm-c-monitoring-status__card"
  >
    <CardTitle
      className="ocm-c-monitoring-status__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Status
      </Title>
    </CardTitle>
    <CardBody
      className="ocm-c-monitoring-status__card--body"
    >
      <MonitoringList
        alerts={Object {}}
        cluster={Object {}}
        nodes={Object {}}
        operators={Object {}}
        resourceUsage={Object {}}
      />
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<Monitoring /> should render correctly with every health status 3`] = `
<Fragment>
  <ClusterHealthCard
    discoveredIssues={0}
    lastCheckIn={2020-02-02T00:00:00.000Z}
    status="DISCONNECTED"
  />
  <MonitoringEmptyState
    lastCheckIn={2020-02-02T00:00:00.000Z}
  />
</Fragment>
`;

exports[`<Monitoring /> should render correctly with every health status 4`] = `
<MonitoringEmptyState
  lastCheckIn={2020-02-02T00:00:00.000Z}
>
  <p>
    Monitoring data is not available if a cluster goes more than three hours without sending metrics.
    <br />
    Check the cluster's web console if you think that this cluster should be sending metrics.
  </p>
</MonitoringEmptyState>
`;

exports[`<Monitoring /> should render correctly with every health status 5`] = `
<Fragment>
  <ClusterHealthCard
    discoveredIssues={0}
    lastCheckIn={2020-02-02T00:00:00.000Z}
    status="UPGRADING"
  />
  <Card
    className="ocm-c-monitoring-status__card"
  >
    <CardTitle
      className="ocm-c-monitoring-status__card--header"
    >
      <Title
        className="card-title"
        headingLevel="h2"
      >
        Status
      </Title>
    </CardTitle>
    <CardBody
      className="ocm-c-monitoring-status__card--body"
    >
      <MonitoringList
        alerts={Object {}}
        cluster={Object {}}
        nodes={Object {}}
        operators={Object {}}
        resourceUsage={Object {}}
      />
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<Monitoring /> should render correctly with every health status 6`] = `
<MonitoringEmptyState
  hideLastCheckIn={true}
>
  <p>
    Monitoring data is not available - cluster did not send any metrics.
    <br />
    Check the cluster's web console if you think that this cluster should be sending metrics.
  </p>
</MonitoringEmptyState>
`;
